package com.iluwatar.component.component.inputcomponent;

import com.iluwatar.component.GameObject;

/**
 * Generic InputComponent interface.
 */
public interface InputComponent {
  void update(GameObject gameObject, int e);
}
